--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="map.html">coverage</a> 
         </nav>
         <div class="icon-header">
-            <div id="menu-bar" class="fas fa-bars"><span class="fas fa-bars"></span> </div>
+            <div id="menu-bar" class="fa fa-bars"><span class="fa fa-bars"></span> </div>
         </div>
 
     </header> 
@@ -68,7 +68,7 @@
     <div class="main-chose">
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fas fa-business-time"><span class="fas fa-business-time"></span></i>
+                <i class="fa fa-business-time"><span class="fa fa-business-time"></span></i>
             </div>
             <h2>Punctuality</h2>
             <p>We complete every project on time. You can trust us to meet deadlines and deliver as promised.</p>
@@ -76,7 +76,7 @@
 
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fas fa-user-friends"><span class="fas fa-user-friends"></span></i>
+                <i class="fa fa-user-friends"><span class="fa fa-user-friends"></span></i>
             </div>
             <h2>Friendliness</h2>
             <p>We aim to make your experience easy and enjoyable. Our team communicates clearly and works well with you.</p>
@@ -84,7 +84,7 @@
 
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fas fa-hammer"><span class="fas fa-hammer"></span></i>
+                <i class="fa fa-hammer"><span class="fa fa-hammer"></span></i>
             </div>
             <h2>Quality Assurance</h2>
             <p> We ensure top-quality results for every project. Our careful checks and attention to detail guarantee great outcomes.</p>
@@ -92,7 +92,7 @@
 
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fas fa-user-shield"><span class="fas fa-user-shield"></span></i>
+                <i class="fa fa-user-shield"><span class="fa fa-user-shield"></span></i>
             </div>
             <h2>Safety</h2>
             <p>We put your safety first. We follow strict safety standards to make sure all work is done securely.</p>
