--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="shortcut icon" type="image/png" href="images/Black Orange & White Simple Minimalist Home Repair Solutions Logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="map.html">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -23,7 +24,7 @@
                 <a href="map.html">coverage</a> 
         </nav>
         <div class="icon-header">
-            <div id="menu-bar" class="fa fa-bars"><span class="fa fa-bars"></span> </div>
+            <div id="menu-bar" class="fas fa-bars"></div>
         </div>
 
     </header> 
@@ -68,7 +69,7 @@
     <div class="main-chose">
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fa fa-business-time"><FontAwesomeIcon icon={iconName}/"fa fa-business-time"></i>
+                <i class="fas fa-business-time"></i>
             </div>
             <h2>Punctuality</h2>
             <p>We complete every project on time. You can trust us to meet deadlines and deliver as promised.</p>
@@ -76,7 +77,7 @@
 
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fa fa-user-friends"><FontAwesomeIcon icon={iconName}/"fa fa-user-friends"></i>
+                <i class="fas fa-user-friends"></i>
             </div>
             <h2>Friendliness</h2>
             <p>We aim to make your experience easy and enjoyable. Our team communicates clearly and works well with you.</p>
@@ -84,7 +85,7 @@
 
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fa fa-hammer"><FontAwesomeIcon icon={iconName}/"fa fa-hammer"></i>
+                <i class="fas fa-hammer"></i>
             </div>
             <h2>Quality Assurance</h2>
             <p> We ensure top-quality results for every project. Our careful checks and attention to detail guarantee great outcomes.</p>
@@ -92,7 +93,7 @@
 
         <div class="inner-chose">
             <div class="chose-icon">
-                <i class="fa fa-user-shield"><FontAwesomeIcon icon={iconName}/"fa fa-user-shield"></span></i>
+                <i class="fas fa-user-shield"></i>
             </div>
             <h2>Safety</h2>
             <p>We put your safety first. We follow strict safety standards to make sure all work is done securely.</p>
