--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 <div id="gallery" class="gallery"></div>
 <div class="our-gallery">
-    <h1>Made <span>made with</span> love</h1>
+    <h1>Made <span>with</span> love</h1>
     <div class="main-gallery">
         <div class="inner-gallery">
             <img src="images/3.jpg" alt="">
